--- a/voter_validation/static/voter_validation/validation.css
+++ b/voter_validation/static/voter_validation/validation.css
@@ -24,6 +24,14 @@
   margin-top: 10px;
 }
 
+.voter-results-panel {
+  padding: 0;
+  margin-top: 20px;
+  align-self: center;
+  width: 95%;
+  max-width: 800px;
+}
+
 input.val-input {
   flex: 1 1 auto;
   margin: 0 0 10px 0;
@@ -32,12 +40,26 @@ input.val-input {
   border: 1px solid #CCC;
 }
 
-table {
-  margin-top: -10px;
+#voter-search-table, #voter-search-table thead > tr > th {
+  text-align: center;
 }
 
-tr:nth-child(even) {
-  background-color: white;
+#voter-search-table tr > th, #voter-search-table tr > td {
+  padding: 10px;
+}
+
+td.validated-result, td.invalidation-action, td.validation-action {
+  font-size: larger;
+}
+
+td .voter-address {
+  font-size: larger;
+  font-weight: bold;
+}
+
+td .voter-name {
+  font-size: large;
+  font-weight: bold;
 }
 
 tr {
