Add front page Campaign progress bars
For the Campaigns that a user is authorized to validate for, this both
links to the Campaign's validation link and shows current validation
progress.

--- a/voter_validation/static/voter_validation/general.css
+++ b/voter_validation/static/voter_validation/general.css
@@ -87,7 +87,6 @@ body, input, button, textarea, select {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: inherit;
-  font-weight: 500;
   line-height: 1.1;
   color: inherit;
 }
@@ -95,11 +94,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 h1, .h1, h2, .h2, h3, .h3 {
   margin-top: 20px;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
 h4, .h4, h5, .h5, h6, .h6 {
   margin-top: 10px;
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 h1, .h1 {
@@ -124,10 +125,6 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 12px;
-}
-
-p {
-  margin: 0 0 10px;
 }
 
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
