--- a/voter_validation/templates/voter_validation/validation.html
+++ b/voter_validation/templates/voter_validation/validation.html
@@ -17,13 +17,14 @@
 
 {% block content %}
     <div class="panel-default panel">
-        <h1 align="center">{{ campaign_name }} Validation</h1>
+        <h1 align="center"><a href="/">{{ campaign_name }} Validation</a></h1>
     </div>
     <div class="justify-center align-center flex column validation-wrapper">
         <div class="panel-default panel validation-panel flex column">
-            Ideally enter at least a ZIP. The more fields you fill out, the more
-            accurate the results. The search backend can work with typos. To
-            invalidate a voter, search again and click "Invalidate".
+            Enter at least a ZIP. The more fields you fill out, the more
+            accurate the results. The search backend can work with typos and
+            partial or inexact matches (e.g. last names only, parts of a street
+            address). To invalidate a voter, search again and click "Invalidate".
 
             <br><br>
 
