--- a/voter_validation/templates/voter_validation/index.html
+++ b/voter_validation/templates/voter_validation/index.html
@@ -5,21 +5,31 @@
 {% block title %}SF Voter Validation Campaigns{% endblock %}
 
 {% block additional_js %}
-    <script async src="{% static "js/moment.js" %}"></script>
-    <script async src="{% static "js/moment-timezone-with-data-2010-2020.js" %}"></script>
+    <script async src="{% static "voter_validation/progressbar.min.js" %}"></script>
+    <script async src="{% static "voter_validation/index.js" %}"></script>
 {% endblock %}
 
 {% block additional_css %}
+    <link href="{% static "voter_validation/index.css" %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
-<div class="panel-default panel">
-    {% if user.is_authenticated %}
+{% if user.is_authenticated %}
+    <div class="panel-default panel">
         <h1 align="center">SF Voter Validation Campaigns</h1>
-    {% else %}
+    </div>
+
+    <script type="text/javascript">
+        var campaigns = {{ campaigns|safe }};
+    </script>
+    {# Campaign progress bars #}
+    <div id="campaign-progress" class="flex wrap">
+    </div>
+{% else %}
+    <div class="panel-default panel">
         Why are you visiting this webpage? You're not authorized.
-    {% endif %}
-</div>
+    </div>
+{% endif %}
 
 {% endblock %}
