Show ZIP in search results
Since this is used to filter the Voters in the database

--- a/voter_validation/templates/voter_validation/validation.html
+++ b/voter_validation/templates/voter_validation/validation.html
@@ -21,7 +21,8 @@
     </div>
     <div class="justify-center align-center flex column validation-wrapper">
         <div class="panel-default panel validation-panel flex column">
-            Enter at least a ZIP. The more fields you fill out, the more
+            Enter at least a ZIP, which is used to filter results (and should
+            be exactly right). The more fields you fill out, the more
             accurate the results. The search backend can work with typos and
             partial or inexact matches (e.g. last names only, parts of a street
             address). To invalidate a voter, search again and click "Invalidate".
